--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -21,7 +21,7 @@ dependencies:
   - certifi=2024.12.14=pyhd8ed1ab_0
   - cffi=1.17.1=py310h8deb56e_0
   - click=8.1.8=pyh707e725_0
-  - cloudpickle=3.1.0=pyhd8ed1ab_2
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py310h3788b33_0
   - cycler=0.12.1=pyhd8ed1ab_1
@@ -31,7 +31,7 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - empymod=2.2.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.55.3=py310h89163eb_1
+  - fonttools=4.55.4=py310h89163eb_0
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310hcb52e73_4
@@ -40,8 +40,8 @@ dependencies:
   - hdf5=1.14.4=nompi_h2d575fe_105
   - hpack=4.0.0=pyhd8ed1ab_1
   - hyperframe=6.0.1=pyhd8ed1ab_1
-  - importlib-metadata=8.5.0=pyha770c72_1
-  - importlib_metadata=8.5.0=hd8ed1ab_1
+  - importlib-metadata=8.6.1=pyha770c72_0
+  - importlib_metadata=8.6.1=hd8ed1ab_0
   - jinja2=3.1.5=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - keyutils=1.6.1=h166bdaf_0
@@ -75,7 +75,7 @@ dependencies:
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.45=h943b412_0
-  - libsqlite=3.47.2=hee588c1_0
+  - libsqlite=3.48.0=hee588c1_1
   - libssh2=1.11.1=hf672d98_0
   - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=14.2.0=h4852527_1
@@ -86,7 +86,7 @@ dependencies:
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.13.5=h0d44e9d_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=19.1.6=h024ca30_0
+  - llvm-openmp=19.1.7=h024ca30_0
   - llvmlite=0.43.0=py310h1a6248f_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h89163eb_1
@@ -120,7 +120,7 @@ dependencies:
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=5_cp310
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py310ha75aee5_1
+  - pyyaml=6.0.2=py310h89163eb_2
   - readline=8.2=h8228510_1
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310hfcf56fc_2
@@ -136,7 +136,7 @@ dependencies:
   - tqdm=4.67.1=pyhd8ed1ab_1
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
-  - tzdata=2024b=hc8b5060_0
+  - tzdata=2025a=h78e105d_0
   - unicodedata2=16.0.0=py310ha75aee5_0
   - urllib3=2.3.0=pyhd8ed1ab_0
   - wheel=0.45.1=pyhd8ed1ab_1
@@ -150,9 +150,9 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@abdd3bd275deba6a92d741674053a9aabcccbeba
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@cdc4c59d47c03e1623d538504317595fcc548163
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@065db6be99def82cb5476cdeca78afd2ea5a3a43
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@728633f4332d7b5052a4b7e3f8958b287222f26b
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0074bae221e775aa3d8abff37de2304a94c411f3
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@f5fe8fd5af50ee1f4252f3ce5eb57adc980a0aa8
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@dbb6a6e2131f4fb6ab26ffe0dcd1bd8adbbbd74d
 
 variables:
