--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -22,8 +22,8 @@ dependencies:
   - attrs=24.3.0=pyh71513ae_0
   - babel=2.16.0=pyhd8ed1ab_1
   - beautifulsoup4=4.12.3=pyha770c72_1
-  - bleach=6.2.0=pyhd8ed1ab_3
-  - bleach-with-css=6.2.0=hd8ed1ab_3
+  - bleach=6.2.0=pyh29332c3_4
+  - bleach-with-css=6.2.0=h82add2a_4
   - brotli=1.1.0=hb9d3cd8_2
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py311hfdbb021_2
@@ -36,7 +36,7 @@ dependencies:
   - cffi=1.17.1=py311hf29c0ef_0
   - charset-normalizer=3.4.1=pyhd8ed1ab_0
   - click=8.1.8=pyh707e725_0
-  - cloudpickle=3.1.0=pyhd8ed1ab_2
+  - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.1=py311hd18a35c_0
@@ -45,9 +45,10 @@ dependencies:
   - cytoolz=1.0.1=py311h9ecbd09_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - debugpy=1.8.11=py311hfdbb021_0
+  - debugpy=1.8.12=py311hfdbb021_0
   - decorator=5.1.1=pyhd8ed1ab_1
   - defusedxml=0.7.1=pyhd8ed1ab_0
+  - deprecated=1.2.15=pyhd8ed1ab_1
   - dill=0.3.9=pyhd8ed1ab_1
   - discretize=0.10.0=py311h92ebd52_1
   - distributed=2024.6.2=pyhd8ed1ab_0
@@ -57,7 +58,7 @@ dependencies:
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_1
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.55.3=py311h2dc5d0c_1
+  - fonttools=4.55.4=py311h2dc5d0c_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
@@ -73,8 +74,8 @@ dependencies:
   - hyperframe=6.0.1=pyhd8ed1ab_1
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=8.5.0=pyha770c72_1
-  - importlib_metadata=8.5.0=hd8ed1ab_1
+  - importlib-metadata=8.6.1=pyha770c72_0
+  - importlib_metadata=8.6.1=hd8ed1ab_0
   - importlib_resources=6.5.2=pyhd8ed1ab_0
   - iniconfig=2.0.0=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh3099207_0
@@ -138,7 +139,7 @@ dependencies:
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.45=h943b412_0
   - libsodium=1.0.20=h4ab18f5_0
-  - libsqlite=3.47.2=hee588c1_0
+  - libsqlite=3.48.0=hee588c1_1
   - libssh2=1.11.1=hf672d98_0
   - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=14.2.0=h4852527_1
@@ -150,7 +151,7 @@ dependencies:
   - libxml2=2.13.5=h0d44e9d_1
   - libzlib=1.3.1=hb9d3cd8_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_1
-  - llvm-openmp=19.1.6=h024ca30_0
+  - llvm-openmp=19.1.7=h024ca30_0
   - llvmlite=0.43.0=py311h9c9ff8c_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
@@ -176,14 +177,14 @@ dependencies:
   - notebook=7.3.2=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numba=0.60.0=py311h4bc866e_0
-  - numcodecs=0.14.1=py311h7db5c69_0
+  - numcodecs=0.15.0=py311h7db5c69_0
   - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.3=h5fbd93e_0
   - openssl=3.4.0=h7b32b05_1
   - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py311h7db5c69_1
-  - pandoc=3.6.1=ha770c72_0
+  - pandoc=3.6.2=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
   - partd=1.4.2=pyhd8ed1ab_0
@@ -195,7 +196,7 @@ dependencies:
   - platformdirs=4.3.6=pyhd8ed1ab_1
   - pluggy=1.5.0=pyhd8ed1ab_1
   - prometheus_client=0.21.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_1
+  - prompt-toolkit=3.0.50=pyha770c72_0
   - psutil=6.1.1=py311h9ecbd09_0
   - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd8ed1ab_1
@@ -222,11 +223,11 @@ dependencies:
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.11=5_cp311
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyyaml=6.0.2=py311h9ecbd09_1
+  - pyyaml=6.0.2=py311h2dc5d0c_2
   - pyzmq=26.2.0=py311h7deb3e3_3
   - readline=8.2=h8228510_1
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
-  - referencing=0.35.1=pyhd8ed1ab_1
+  - referencing=0.36.1=pyhd8ed1ab_0
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
@@ -277,7 +278,7 @@ dependencies:
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
   - typing_utils=0.1.0=pyhd8ed1ab_1
-  - tzdata=2024b=hc8b5060_0
+  - tzdata=2025a=h78e105d_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
   - unicodedata2=16.0.0=py311h9ecbd09_0
   - uri-template=1.3.0=pyhd8ed1ab_1
@@ -288,6 +289,7 @@ dependencies:
   - websocket-client=1.8.0=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - widgetsnbextension=3.6.10=pyhd8ed1ab_0
+  - wrapt=1.17.2=py311h9ecbd09_0
   - xorg-libxau=1.0.12=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - yaml=0.2.5=h7f98852_2
@@ -299,9 +301,9 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@abdd3bd275deba6a92d741674053a9aabcccbeba
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@cdc4c59d47c03e1623d538504317595fcc548163
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@065db6be99def82cb5476cdeca78afd2ea5a3a43
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@728633f4332d7b5052a4b7e3f8958b287222f26b
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0074bae221e775aa3d8abff37de2304a94c411f3
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@f5fe8fd5af50ee1f4252f3ce5eb57adc980a0aa8
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@dbb6a6e2131f4fb6ab26ffe0dcd1bd8adbbbd74d
 
 variables:
