--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "simpeg-drivers" %}
-{% set version = "0.3.0a1" %}
+{% set version = "0.2.0rc1" %}
 
 package:
   name: {{ name|lower }}
