--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ mkl = ">=2024.2.2, <2025.dev"  # from simpeg
 pandas = ">=2.2.1, <2.3.0"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = ">=2.5.2, <3.0.0"  # from geoh5py, geoapps-utils
 pydiso = ">=0.1.0, <0.2.0"  # from simpeg
+python-mumps = ">=0.0.3, <1.0.0"  # from simpeg
 pymatsolver = ">=0.3.0, <0.4.0"  # from simpeg
 scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.0"  # from simpeg
