--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,21 +93,21 @@ libblas = "*=*mkl"  # because simpeg already brings in the MKL
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
-Pillow = ">=10.3.0, <10.4.0"  # from geoh5py
-empymod = ">=2.2.1, <2.3.0"  # from simpeg and geoana
+Pillow = ">=10.3.0, <10.4.dev"  # from geoh5py
+empymod = ">=2.2.1, <2.3.dev"  # from simpeg and geoana
 fsspec = "2022.*"  # from simpeg[dask]
-geoana = ">=0.5.0, <0.6.0"  # from simpeg
-h5py = ">=3.2.1, <4.0.0"  # from geoh5py
-matplotlib-base = ">=3.8.4, <3.9.0"  # from simpeg
+geoana = ">=0.5.0, <0.6.dev"  # from simpeg
+h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
+matplotlib-base = ">=3.8.4, <3.9.dev"  # from simpeg
 mkl = ">=2024.2.2, <2025.dev"  # from simpeg
-pandas = ">=2.2.1, <2.3.0"  # from SimPEG, also used by targeting-workflow, petro-lingo
-pydantic = ">=2.5.2, <3.0.0"  # from geoh5py, geoapps-utils
-pydiso = ">=0.1.0, <0.2.0"  # from simpeg
-python-mumps = ">=0.0.3, <1.0.0"  # from simpeg
-pymatsolver = ">=0.3.0, <0.4.0"  # from simpeg
-scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
-tqdm = ">=4.66.1, <5.0.0"  # from simpeg
-zarr = ">=2.14.2, <2.15.0"  # from simpeg[dask]
+pandas = ">=2.2.1, <2.3.dev"  # from SimPEG, also used by targeting-workflow, petro-lingo
+pydantic = ">=2.5.2, <3.0.dev"  # from geoh5py, geoapps-utils
+pydiso = ">=0.1.0, <0.2.dev"  # from simpeg
+python-mumps = ">=0.0.3, <1.0.dev"  # from simpeg
+pymatsolver = ">=0.3.0, <0.4.dev"  # from simpeg
+scikit-learn = ">=1.4.0, <1.5.dev"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
+tqdm = ">=4.66.1, <5.0.dev"  # from simpeg
+zarr = ">=2.14.2, <2.15.dev"  # from simpeg[dask]
 
 # force some versions to resolve incompatible resolution between PyPI and Conda
 #------------------------------------------------------------------------------
