--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "simpeg-drivers" %}
-{% set version = "0.2.1a1" %}
+{% set version = "0.2.1a2 %}
 {% set python_min = "3.10.0" %}
 
 package:
