--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,11 @@ dask = {version = "2024.6.*", extras = ["distributed"]}  # also in simpeg[dask]
 discretize = "0.10.*"  # also in simpeg, octree-creation-app
 distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
 numpy = "~1.26.0" # also in geoh5py, simpeg
-pydiso = "0.1.*"  # not imported, but required at runtime for simpeg
 scipy = "~1.14.0"
+
+# solvers for simpeg: not imported, but at least one required at runtime
+pydiso = ">=0.1.0, <0.2.dev"
+python-mumps = ">=0.0.3, <0.0.4.dev"
 
 ## Pip dependencies from Git repositories
 #----------------------------------------
@@ -97,8 +100,6 @@ h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
 matplotlib-base = ">=3.8.4, <3.9.dev"  # from simpeg
 pandas = ">=2.2.1, <2.3.dev"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = ">=2.5.2, <3.0.dev"  # from geoh5py, geoapps-utils
-pydiso = ">=0.1.0, <0.2.dev"  # from simpeg
-python-mumps = ">=0.0.3, <1.0.dev"  # from simpeg
 pymatsolver = ">=0.3.0, <0.4.dev"  # from simpeg
 scikit-learn = ">=1.4.0, <1.5.dev"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.dev"  # from simpeg
