--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ octree-creation-app = {version = ">=0.2.0, <0.3.dev", source = "pypi", allow-pre
 geoapps-utils = {version = ">=0.4.0, <0.5.dev", source = "pypi", allow-prereleases = true}
 #geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "release/0.4.0"}
 
-mira-simpeg = {version = ">=0.21.2.1, <0.21.2.2.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
+mira-simpeg = {version = ">=0.21.2.2a1, <0.21.3.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
 #mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "release/0.21.2.1", extras = ["dask"]}
 
 param-sweeps = {version = ">=0.2.0, <0.3.dev", source = "pypi", allow-prereleases = true}
