--- a/recipe.yaml
+++ b/recipe.yaml
@@ -29,7 +29,7 @@ requirements:
     - geoapps-utils >=0.4.0, <0.5.dev
     - geoh5py >=0.10.1, <0.11.dev
     - octree-creation-app >=0.2.0, <0.3.dev
-    - mira-simpeg >=0.21.2.1, <0.22.dev
+    - mira-simpeg >=0.21.2.2a1, <0.21.3.dev
     - param-sweeps >=0.2.0, <0.2.1.dev
     # direct dependencies
     - dask-core >=2024.06, <2024.07.dev
