--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ numpy = "~1.26.0" # also in geoh5py, simpeg
 pydiso = "0.1.*"  # not imported, but required at runtime for simpeg
 scipy = "~1.14.0"
 
+
 ## Pip dependencies from Git repositories
 #----------------------------------------
 #geoh5py = {version = ">=0.10.1rc1, <0.11.0a.dev", source = "pypi", allow-prereleases = true}
@@ -83,6 +84,8 @@ readthedocs-sphinx-ext = "*"
 sphinx = "^5.0"
 tomli = "*"
 nbconvert = "~7.16.4"
+plantuml = "*"
+Graphviz = "*"
 
 [tool.conda-lock]
 platforms = ['win-64', 'linux-64']
